Dialog scroll preventer: handle `overflow: scroll` on html

--- a/components/dialog/dialog.css
+++ b/components/dialog/dialog.css
@@ -97,7 +97,7 @@
   right: unit;
 }
 
-.bodyWithoutScroll {
+.documentWithoutScroll {
   overflow: hidden;
 
   height: 100%;
